# cplus_plus_rts_opengl

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
assets/shaders/: basic.vert
src/: App.cpp  App.hpp
src/core/: Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  InputManager.cpp  InputManager.hpp  Mesh.cpp  Mesh.hpp  ObjModel.cpp  ObjModel.hpp  OpenGLContext.cpp  OpenGLContext.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp
src/ecs/: Entity.hpp  Scene.hpp
src/ecs/component/: TransformComponent.hpp
src/render/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  Texture2D.cpp  Texture2D.hpp
src/rtsgame/: Tile.hpp
src/systems/: ISystem.hpp  RenderSystem.hpp
src/utils/: GameTimer.hpp  Vec2.hpp
